Refazer com outra tematica

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header class="parte-de-cima">
 <img class="imagem-logo" src = "Logo.svg" alt = "Logo da Ballerine" >
 <nav class="divisao-de-cima">
-<a class="ancora"> Comunidade Balle </a>
+<a class="ancora" href="https://discord.gg/wagxzStdcR" > Comunidade Balle </a>
 <a class="ancora"> Open Source </a>
 <a class="ancora">Comandos </a>
 <a class="ancora">Tutorial</a>
@@ -42,7 +42,7 @@
 
 </main>
 
-<footer>
+<footer class="rodape">
 
 <img class="logo-rodape" src="BALLERINI.svg" alt="Ballerini" >
 
